# ray-tracer

./: CMakeLists.txt  README.md
src/: Vec3.cpp  Vec3.h  camera.h  directionlight.h  image.cpp  image.h  light.h  main.cpp  material.h  pixel.h  pointlight.h  scene.cpp  scene.h  sphere.cpp  sphere.h  spotlight.cpp  spotlight.h
